# AutoArchon

./: .gitignore  ORCHESTRATOR_GUIDE.md  README.md  THIRD_PARTY_NOTICES.md  archon-loop.sh  init.sh  pyproject.toml  review.sh  setup.sh
.Jules/: palette.md
.archon-src/archon-template/: AGENTS.md
.archon-src/prompts/: init.md  plan.md  prover-autoformalize.md  prover-prover.md
.archon-src/skills/lean4/: README.md
.archon-src/tools/: helper_prover_agent.py  informal_agent.py
.jules/: sentinel.md
agents/: campaign-operator.json  helper-prover-agent.json  informal-agent.json  manager-agent.json  mathlib-agent.json  orchestrator-agent.json  plan-agent.json  prover-agent.json  review-agent.json  statement-validator.json  supervisor-agent.json
analysis/mathlib-agent/: README.md  research-plan.md
archonlib/: __init__.py  agent_registry.py  backup_bundle.py  campaign.py  codex_logs.py  formalization.py  helper_analysis.py  helper_health.py  helper_index.py  helper_models.py  lake_prewarm.py  launch_contract.py  lesson_clusters.py  lessons.py  operator_surfaces.py  orchestrator_watchdog.py  project_state.py  run_workspace.py  runtime_config.py  storage.py  supervisor.py  validation.py
campaign_specs/: fate-h-full.json  fate-m-full.json  fate-x-full.json  formalization-default.json  open-problem-default.json
docs/: agent-registry.md  architecture.md  benchmarking.md  campaign-operator.md  manager-watchdog.md  migration-recovery.md  operations.md  orchestrator.md  postmortem-20260413-nightly.md  postmortem-20260415-rerun12-fatem-42-45-94.md  teacher-agents.md
docs/archive/: manager-agent.md
docs/roadmaps/: control-plane-phase3.md  control-plane-phase4.md  control-plane-phase5.md  control-plane-phase6.md  control-plane-phase7.md  control-plane-phase8.md  supervisor-phase2.md
docs/templates/: campaign-operator-prompt-template.md
examples/: helper.env.example
scripts/: __init__.py  backup_workspace_to_hf.py  campaign_archive.py  campaign_compare.py  campaign_observer.py  campaign_overview.py  campaign_recover.py  campaign_status.py  cleanup_launchers.py  codex_exec.py  collect_fate_campaign_summaries.sh  create_campaign.py  create_run_workspace.py  export_run_artifacts.py  extract-attempts.py  extract_attempts.py  finalize_campaign.py  helper_analysis.py  helper_healthcheck.py  init_campaign_spec.py  init_operator_intake.py  install_repo_skill.sh  launch_from_spec.py  lesson_clusters.py  materialize_markdown_problem_pack.py  materialize_problem_pack.py  orchestrator_watchdog.py  plan_campaign_shards.py  prewarm_project.py  refresh_launch_assets.py  render_operator_prompt.py  run_orchestrator.py  start_campaign_operator.sh  start_fate_overnight_watchdogs.sh  storage_report.py  supervised_cycle.py  validate_launch_contract.py  validate_review.py  watch_campaign.sh  watch_run.sh
skills/archon-orchestrator/: SKILL.md
skills/archon-orchestrator/agents/: openai.yaml
skills/archon-orchestrator/references/: campaign-layout.md  operator-surfaces.md  runbook.md  startup-brief.md
skills/archon-supervisor/: SKILL.md
skills/archon-supervisor/agents/: openai.yaml
tests/: test_agent_registry.py  test_archon_loop.py  test_backup_bundle.py  test_campaign_observer.py  test_campaign_runtime.py  test_cli_entrypoints.py  test_codex_host_contracts.py  test_codex_logs.py  test_docs_contracts.py  test_helper_analysis.py  test_helper_health.py  test_helper_models.py  test_helper_tool.py  test_informal_agent.py  test_init_campaign_spec.py  test_lake_prewarm.py  test_launch_contract.py  test_lesson_clusters.py  test_materialize_markdown_problem_pack.py  test_materialize_problem_pack.py  test_operator_intake.py  test_orchestrator_watchdog.py  test_project_state.py  test_prompt_contracts.py  test_render_operator_prompt.py  test_runtime_config.py  test_storage_report.py  test_supervisor_docs.py  test_supervisor_runtime.py  test_validation.py
ui/: README.md  start.sh
(+23 files in other folders)
