[project]
name = "archon-codex"
version = "0.1.0"
description = "Codex-compatible Archon runtime helpers"
requires-python = ">=3.10"
dependencies = [
  "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
autoarchon-campaign-compare = "scripts.campaign_compare:main"
autoarchon-campaign-archive = "scripts.campaign_archive:main"
autoarchon-campaign-observe = "scripts.campaign_observer:main"
autoarchon-campaign-overview = "scripts.campaign_overview:main"
autoarchon-campaign-recover = "scripts.campaign_recover:main"
autoarchon-campaign-status = "scripts.campaign_status:main"
autoarchon-clean-launchers = "scripts.cleanup_launchers:main"
autoarchon-codex-exec = "archonlib.codex_logs:main"
autoarchon-create-campaign = "scripts.create_campaign:main"
autoarchon-create-run-workspace = "scripts.create_run_workspace:main"
autoarchon-export-run-artifacts = "scripts.export_run_artifacts:main"
autoarchon-extract-attempts = "scripts.extract_attempts:main"
autoarchon-finalize-campaign = "scripts.finalize_campaign:main"
autoarchon-helper-analysis = "scripts.helper_analysis:main"
autoarchon-init-campaign-spec = "scripts.init_campaign_spec:main"
autoarchon-init-operator-intake = "scripts.init_operator_intake:main"
autoarchon-lesson-clusters = "scripts.lesson_clusters:main"
autoarchon-orchestrator-watchdog = "scripts.orchestrator_watchdog:main"
autoarchon-plan-shards = "scripts.plan_campaign_shards:main"
autoarchon-prewarm-project = "scripts.prewarm_project:main"
autoarchon-refresh-launch-assets = "scripts.refresh_launch_assets:main"
autoarchon-render-operator-prompt = "scripts.render_operator_prompt:main"
autoarchon-run-orchestrator = "scripts.run_orchestrator:main"
autoarchon-launch-from-spec = "scripts.launch_from_spec:main"
autoarchon-materialize-markdown-problem-pack = "scripts.materialize_markdown_problem_pack:main"
autoarchon-materialize-problem-pack = "scripts.materialize_problem_pack:main"
autoarchon-storage-report = "scripts.storage_report:main"
autoarchon-supervised-cycle = "scripts.supervised_cycle:main"
autoarchon-validate-launch-contract = "scripts.validate_launch_contract:main"
autoarchon-validate-review = "scripts.validate_review:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["archonlib", "scripts"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
